added broken tel link

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <!-- Your content goes here -->
     <h1>Welcome to My Website</h1>
     <p>This is a basic HTML page.</p>
-    <a href="tel:+19177001234">917-700-1234</a>
+    <p><a href="tel:+19177001234">917-700-1234</a></p>
+    <p><a href="tel:1234567890">Call Broken Number (1234567890)</a></p>
 </body>
 </html
