--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <!-- Your content goes here -->
     <h1>Welcome to My Website</h1>
     <p>This is a basic HTML page.</p>
-    <p><a href="tel:+19177001234">917-700-1234</a></p>
+    <p><a href="tel:+15551234567">Call +1 (555) 123-4567</a></p>
     <p><a href="tel:1234567890">Call Broken Number (1234567890)</a></p>
+    <p><a href="imedidata.net">iMedidata.net</a></p>
 </body>
 </html
