--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>Welcome to My Website</h1>
     <p>This is a basic HTML page.</p>
     <p><a href="tel:+15551234567">Call +1 (555) 123-4567</a></p>
-    <p><a href="tel:abc123xyz">Call Broken Number (abc123xyz)</a></p>
+    <p><a href="tel:">Call Broken Number</a></p>
     <p><a href="imedidata.net">iMedidata.net</a></p>
 </body>
 </html
