--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <!-- Your content goes here -->
-    <h1>Welcome to My Website</h1>
+    <h3>Links</h3>
     <p>This is a basic HTML page.</p>
     <p><a href="tel:+15551234567">Call +1 (555) 123-4567</a></p>
     <p><a href="tel:+">Call Broken Number</a></p>
