--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h3>Links</h3>
     <p>This is a basic HTML page.</p>
     <p><a href="tel:+15551234567">Call +1 (555) 123-4567</a></p>
-    <p><a href="tel:+">Call Broken Number</a></p>
+    <p><a href="tel:">Call Broken Number</a></p>
     <p><a href="imedidata.net">iMedidata.net</a></p>
     <p><a href="mailto:test@imedidata.net">Send email to: test@imedidata.net</a></p>
 </body>
